<resources>
    <string name="app_name">IP Cam Viewer</string>
    <string name="add_camera">Add camera</string>
    <string name="no_cameras_yet">No cameras yet. Tap + to add one.</string>
    <string name="camera_name">Camera name</string>
    <string name="ip_address_or_host">IP address or host</string>
    <string name="rtsp_port">RTSP port</string>
    <string name="stream_path">Stream path (e.g. /stream1)</string>
    <string name="username_optional">Username (optional)</string>
    <string name="password_optional">Password (optional)</string>
    <string name="transport_tcp">TCP</string>
    <string name="transport_udp">UDP</string>
    <string name="save_camera">Save camera</string>
    <string name="scan_network">Scan Network</string>
    <string name="no_devices_found">No ONVIF devices found. Make sure your phone and cameras are on the same Wi-Fi network, then try again.</string>
    <string name="add">Add</string>
    <string name="stream_error">Couldn\'t connect to the stream</string>
    <string name="retry">Retry</string>
</resources>
